--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -8,7 +8,7 @@
             <a href="/home/<%= register.id %>" class="p-2 active">        
                 Início
             </a>
-            <a href="/novasolicitacao/<%= register.id %>" class="p-2">
+            <a href="/agendamento/<%= register.id %>" class="p-2">
                 Agendamentos
             </a>
             <a href="/perfil/<%= register.id %>" class="p-2">
