--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,100 +8,108 @@
     <div class="align-items-center p-3 ">
         <h5>Perfil</h5>
         <hr>
-    <div class="form-inline py-1 justify-content-around">
-        <img src="/img/pessoa.png" alt="" style="width: 15%; border-radius: 50%; " >
-        <div class="col-4">
-            <h6>Nome</h6>  
-                <p><%= register.nome %></p>
-            <h6>E-mail</h6>
-                <p><%= register.email %></p>
-            <h6>Telefone </h6>
-                <p><%= register.telefone %></p>
-        </div>
-        <div class="col-4 ">
-            <h6>CPF </h6>
-            <p> <%= register.cpf %></p>
-            <h6>RNE </h6>
-            <p> <%= register.rne %></p>
-            <h6>Passaporte </h6>
-            <p><%= register.pass %></p>
-
+        <div class="form-inline py-1 justify-content-around">
+            <img src="/img/pessoa.png" alt="" style="width: 15%; border-radius: 50%; " >
+            <div class="col-4">
+                <h6>Nome</h6>  
+                    <p><%= register.nome %></p>
+                <h6>E-mail</h6>
+                    <p><%= register.email %></p>
+                <h6>Telefone </h6>
+                    <p><%= register.telefone %></p>
+            </div>
+            <div class="col-4 ">
+                <h6>CPF </h6>
+                <p> <%= register.cpf %></p>
+                <h6>RNE </h6>
+                <p> <%= register.rne %></p>
+                <h6>Passaporte </h6>
+                <p><%= register.passaporte %></p>
+            </div>
         </div>
     </div>
-</div>    
+   
 <hr>
-<div class="my-4 container">
-    <div class="align-items-center px-3">
-        <h5>Alterar seu cadastro</h5>
-        <hr>
-        <form action="/editar" method="POST"></form>
-            <div class="form-row">
-                <div class="form-group col-4">
-                    <label for="example-text-input"><h6> Nome completo</h6></label>
-                    <input 
-                    name="nome"
-                    type="text" 
-                    class="form-control" 
-                    placeholder="<%= register.nome %>" 
-                    id="example-text-input">
-                </div>
-    
-                <div class="form-group col-4">
-                    <label for="example-cpf"><h6>CPF</h6></label>
-                    <input 
-                    name="cpf"
-                    class="form-control" 
-                    type="text" maxlength="14" 
-                    placeholder="<%= register.cpf %>" 
-                    id="example-cpf">
-                </div>
-                <div class="form-group col-4">
-                    <label for="example-cpf"><h6>RNE</h6></label>
-                    <input 
-                    name="rne"
-                    class="form-control" 
-                    type="text" maxlength="14" 
-                    placeholder="<%= register.rne %>" 
-                    id="example-cpf">
-                </div>
-                <div class="form-group col-4">
-                    <label for="example-tel-input"><h6>Passaporte</h6></label>
-                    <input 
-                        name="passaporte"
-                        class="form-control" 
-                        type="tel" 
-                        placeholder="<%= register.pass %>" 
-                        id="example-tel-input">
-                </div>
-                <div class="form-group col-4">
-                    <label for="inputIM"><h6>E-mail</h6></label>
-                    <input 
-                        name="email"
-                        type="email" 
-                        class="form-control" 
-                        placeholder="<%= register.email %>" 
-                        id="exampleInputEmail1">
-                </div>
-                <div class="form-group col-4">
-                    <label for="example-tel-input"><h6>Telefone</h6></label>
-                    <input 
-                        name="tel"
-                        class="form-control" 
-                        type="tel" 
-                        placeholder="<%= register.telefone %>" 
-                        id="example-tel-input">
-                </div>
-            </div>
-            <div  class="py-2 d-flex justify-content-between">
-                <a href="/home/<%= register.id %>" class="btn btn-secondary" role="button">Cancelar</a>
-                <button class="btn btn-success"> Salvar</button>
-            </div>
+        <div class="my-4 container">
+        <div class="align-items-center px-3">
+            <h5>Alterar seu cadastro</h5> 
+            <small> * Preencha todos os campos</small>
             <hr>
-                <div class=" container">
-                    <div>
-                        <button class="btn btn-danger"> Excluir minha conta</button>
+            <form action="/editarProfile/<%= register.id %>" method="POST">
+                <div class="form-row">
+                    <div class="form-group col-4">
+                        <label for="example-text-input"><h6> Nome completo</h6></label>
+                        <input 
+                        name="nome"
+                        type="text" 
+                        class="form-control" 
+                        placeholder="<%= register.nome %>" 
+                        id="example-text-input">
+                    </div>
+
+                    <div class="form-group col-4">
+                        <label for="example-cpf"><h6>CPF</h6></label>
+                        <input 
+                        name="cpf"
+                        class="form-control" 
+                        type="text" maxlength="14" 
+                        placeholder="<%= register.cpf %>" 
+                        id="example-cpf">
+                    </div>
+                    <div class="form-group col-4">
+                        <label for="example-cpf"><h6>RNE</h6></label>
+                        <input 
+                        name="rne"
+                        class="form-control" 
+                        type="text" maxlength="14" 
+                        placeholder="<%= register.rne %>" 
+                        id="example-cpf">
+                    </div>
+                    <div class="form-group col-4">
+                        <label for="example-tel-input"><h6>Passaporte</h6></label>
+                        <input 
+                            name="passaporte"
+                            class="form-control" 
+                            type="tel" 
+                            placeholder="<%= register.passaporte %>" 
+                            id="example-tel-input">
+                    </div>
+                    <div class="form-group col-4">
+                        <label for="inputIM"><h6>E-mail</h6></label>
+                        <input 
+                            name="email"
+                            type="email" 
+                            class="form-control" 
+                            placeholder="<%= register.email %>" 
+                            id="exampleInputEmail1">
+                    </div>
+                    <div class="form-group col-4">
+                        <label for="example-tel-input"><h6>Telefone</h6></label>
+                        <input 
+                            name="tel"
+                            class="form-control" 
+                            type="tel" 
+                            placeholder="<%= register.telefone %>" 
+                            id="example-tel-input">
                     </div>
                 </div>
+                <div  class="py-2 d-flex justify-content-between">
+                    <a href="/home/<%= register.id %>" class="btn btn-secondary" role="button">Cancelar</a>
+                    <button 
+                    type="submit" 
+                    class="btn btn-success" 
+                    onclick="return confirm('Cadastro atualizado com sucesso!');"> Salvar</button>
+                </div>
+            </form>
+            <hr>
+            <div class=" container">
+                <div>
+                    <a 
+                    href="/remove/<%= register.id %> " 
+                    class="btn btn-danger" 
+                    onclick="return confirm('Você tem certeza que deseja excluir?');"> Excluir minha conta</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
